<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

        <requestFocus
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

           
           <Button
               android:id="@+id/button2"
               android:layout_width="100dp"
               android:layout_height="wrap_content"
               android:layout_alignBaseline="@+id/button1"
               android:layout_alignBottom="@+id/button1"
               android:layout_toRightOf="@+id/button1"
               android:focusable="false"
               android:focusableInTouchMode="false"
               android:onClick="result"
               android:text="@string/button2" />
           
           <TextView
               android:id="@+id/TextView"
               android:layout_width="200dp"
               android:layout_height="60dp"
               android:layout_alignLeft="@+id/button1"
               android:layout_alignParentBottom="true"
               android:text="@+id/TextView"
               android:textSize="26sp" />

                     <EditText
               android:id="@+id/value0"
               android:layout_width="200dp"
               android:layout_height="60dp"
               android:layout_alignParentLeft="true"
               android:layout_alignParentTop="true"
               android:layout_marginLeft="20dp"
               android:layout_marginTop="20dp"
               android:ems="10"
               android:hint="@string/value0"
               android:imeActionLabel="Next"
               android:imeOptions="actionNext" />
           
           
           
           <EditText
               android:id="@+id/value1"
               android:layout_width="200dp"
               android:layout_height="60dp"      
               android:layout_alignLeft="@+id/value0"
               android:layout_below="@+id/value0"
               android:ems="10"
               android:hint="@string/value1"
               android:imeActionLabel="Next"
               android:imeOptions="actionNext" />

           <EditText
               android:id="@+id/value2"
               android:layout_width="200dp"
               android:layout_height="60dp"
               android:layout_alignLeft="@+id/value1"
               android:layout_below="@+id/value1"
               android:ems="10"
               android:hint="@string/value2"
               android:imeActionLabel="Next"
               android:imeOptions="actionNext" />

           <Button
               android:id="@+id/button1"
               android:layout_width="130dp"
               android:layout_height="wrap_content"
               android:layout_alignLeft="@+id/value2"
               android:layout_below="@+id/value2"
               android:layout_marginTop="16dp"
               android:focusable="false"
               android:focusableInTouchMode="false"
               android:onClick="conect"
               android:text="@string/button1" />

           <Button
               android:id="@+id/button3"
               android:layout_width="100dp"
               android:layout_height="wrap_content"
               android:layout_alignLeft="@+id/button1"
               android:layout_below="@+id/button1"
               android:layout_marginTop="18dp"
               android:focusable="false"
               android:focusableInTouchMode="false"
               android:onClick="cancel"
               android:text="@string/button0" />

</RelativeLayout>